# TROPICA

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  agents.md  pyproject.toml
.github/workflows/: ci.yml
demos/: __init__.py  render_experiment_visuals.py  render_model_integration_visuals.py  render_scale_visuals.py  render_stress_visuals.py  render_structured_output_visuals.py  render_tokenizer_correctness_visuals.py  render_trace_explorer.py  render_unified_trace_visuals.py  run_all_reports.py  run_dyck_support_demo.py  run_experiment_harness.py  run_grid_ltl_demo.py  run_model_integration_harness.py  run_scale_harness.py  run_stress_harness.py  run_structured_output_harness.py  run_tokenizer_correctness_harness.py  run_unified_trace_harness.py
docs/: API_QUICKSTART.md  ARCHITECTURE.md  COLAB.md  EXPERIMENT_PLAN.md  INSTALL.md  INTRODUCTION.md  METRICS.md  MODEL_INTEGRATION.md  REPORTING.md
notebooks/: 01_operator_onboarding.ipynb  02_benchmark_suite.ipynb  03_researcher_showcase.ipynb  README.md
prompts/: 00_orchestrator.md  01_control_delta_block.md  02_planner_guard.md  03_experiment_harness.md  04_tokenizer_compiler.md
src/cdsd/: __init__.py  cli.py  contracts.py  control_delta_block.py  decoder.py  masks.py  model_integration.py  reporting.py  structured_output.py  tokenizer_compiler.py
src/cdsd/evidence/: __init__.py  runner.py
src/cdsd/guards/: dyck.py
tests/: test_colab_notebooks.py  test_contracts.py  test_control_delta_block.py  test_dyck.py  test_grid_ltl.py  test_json_schema.py  test_masks.py  test_model_integration.py  test_packaging_cli.py  test_reporting.py  test_structured_output.py  test_tokenizer_compiler.py  test_tool_workflow.py  test_trace_explorer.py
(+4 files in other folders)
