[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "control-delta-support-decoding"
version = "0.1.0"
description = "Planner-guided support decoding with a gated DeltaNet-style internal control lane"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "TROPICA Contributors" }
]
keywords = ["constrained-decoding", "structured-output", "tokenizer", "agents", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1"
]

[project.optional-dependencies]
real-tokenizers = [
  "tiktoken>=0.12",
  "tokenizers>=0.22"
]
dev = [
  "build>=1.0",
  "pytest>=7.0"
]

[project.scripts]
cdsd-report = "cdsd.cli:main"

[project.urls]
Homepage = "https://github.com/example/control-delta-support-decoding"
Documentation = "https://github.com/example/control-delta-support-decoding#readme"
Issues = "https://github.com/example/control-delta-support-decoding/issues"

[tool.setuptools]
package-dir = {"" = "src", "demos" = "demos"}
packages = [
  "cdsd",
  "cdsd.evidence",
  "cdsd.guards",
  "cdsd.planners",
  "demos"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
